test_suite/tests/ui/enum-representation/untagged-struct.stderr
error: #[serde(untagged)] can only be used on enums
 --> $DIR/untagged-struct.rs:6:1
  |
6 | struct S;
  | ^^^^^^

error: aborting due to previous error

